Change buttons and fixed flickering building table

--- a/frontend/src/styles/accounts.css
+++ b/frontend/src/styles/accounts.css
@@ -26,6 +26,7 @@
   display: flex; 
   gap: 10px;
   align-items: center;
+  border-radius: 100px;
 }
 
 .search-bar input {
@@ -77,6 +78,20 @@
 }
 
 .action-button.add-new:hover {
+  background-color: #e6a700;
+}
+.action-button.delete {
+  background-color: #d63e3e;
+  font-size: small;
+  border-radius: 50px;
+  padding: 10px;
+
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+}
+
+.action-button.delete:hover {
   background-color: #e6a700;
 }
 
@@ -470,7 +485,7 @@ input {
 .modal-title {
   font-size: 1.8em;
   font-weight: 600;
-  color: #110365;
+  color: #333d52;
   margin-bottom: 20px;
 }
 
@@ -482,7 +497,7 @@ input {
   background: #eef3f9;
   border-radius: 10px;
   border-left: 5px solid #110365;
-  padding: 20px 25px;
+  padding: 0px 25px;
   margin-bottom: 20px;
 }
 
@@ -545,6 +560,8 @@ input {
 .icon-button.edit-button {
   background-color: #b5c5f0;
   color: #110365;
+  border-radius: 100px;
+  padding: 6px;
 }
 
 .icon-button.edit-button:hover {
@@ -554,6 +571,8 @@ input {
 .icon-button.delete-button {
   background-color: #fde2e2;
   color: #721c24;
+  border-radius: 100px;
+  padding: 6px;
 }
 
 .icon-button.delete-button:hover {
